retrieveUnpackaged/objects/External_Picklist__c.object
<CustomObject>
    <description>External values for integration picklists.</description>
    <fields>
        <fullName>External_Key__c</fullName>
        <description>Used for updates by Data Loader only.</description>
        <displayFormat>EP-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Used for updates by Data Loader only.</inlineHelpText>
        <label>External Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <label>External System</label>
        <picklist>
            <picklistValues>
                <fullName>SYSTEM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Picklist__c</fullName>
        <label>Integration Picklist</label>
        <referenceTo>Integration_Picklist__c</referenceTo>
        <relationshipLabel>External Picklists</relationshipLabel>
        <relationshipName>External_Picklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>External Picklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>